# tuxbot-bot

./: .dockerignore  .flake8  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .pylintrc  INSTALL.rst  LICENSE  LICENSE.md  Makefile  README.md  README.rst  app.py  autoinstall.sh  blacklist.json  bot.py  database.py  dev.requirements.txt  generate_locales.sh  hello  init.sh  launcher.py  local.yml  migrate.py  mypy.ini  optimiser.bat  output.txt  prefixes.json  production.yml  pyproject.toml  qodana.yaml  requirements.txt  setup.cfg  setup.py  test.py  test2.py  todo  version.py
.envs.example/.local/: .bot  .cogs  .postgres
.envs.example/.production/: .bot  .postgres
.envs/.local/: .postgres
.github/: dependabot.yml  issue_template.md
.github/workflows/: ci.yml  flake8.yml  isort.yml  mypy.yml  pylint.yml  qodana_code_quality.yml
Tuxbot_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cogs/: API.py  Admin.py  Help.py  Images.py  Logs.py  Monitoring.py  Network.py  Poll.py  Polls.py  Useful.py  Useless.py  User.py  admin.py  afk.py  atc.py  basics.py  ci.py  cluster_manager.py  fallback_manager.py  filter_messages.py  funs.py  help.py  logs.py  monitoring.py  poll.py  role.py  search.py  send_logs.py  sondage.py  user.py  utility.py  vocal.py
cogs/utils/: __init__.py  checks.py  cli_colors.py  config.py  database.py  db.py  emotes.py  extra.py  formats.py  lang.py  maps.py  menu.py  paginator.py  version.py
cogs/utils/models/: __init__.py  alias.py  lang.py  poll.py  warn.py
compose/local/bot/: Dockerfile
compose/local/tuxbot/: Dockerfile  start
compose/production/bot/: Dockerfile  entrypoint
compose/production/tuxbot/: Dockerfile  entrypoint  start
configs/: config.cfg.example  fallbacks.cfg.example  langs.json  prefixes.cfg
configs/bot/: blacklist.json  protected.py  settings.py.example  whitelist.json
data.example/settings/: development.yaml  production.yaml
docker/local/bot/: Dockerfile  entrypoint  start
docker/production/bot/: Dockerfile
docker/production/postgres/: Dockerfile
docker/production/postgres/maintenance/: backup  backups  restore
docker/scripts/: get-poetry.py
extras/first_run/: __init__.py  initializer.py  langs.py
extras/locales/en/LC_MESSAGES/: admin.mo  admin.po  admin_help.po  base.po  help.po  useful.po  utility.mo  utility.po
extras/locales/fr/LC_MESSAGES/: admin.mo  admin.po  admin_help.po  base.mo  basics.mo  basics.po  help.po  logs_help.po  poll.mo  poll.po  utility.mo  utility.po  utils.mo
first_run/: __init__.py  config_generator.py  initializer.py  langs.py
locales/en/LC_MESSAGES/: admin.po  base.mo  base.po  basics.po
locales/fr/LC_MESSAGES/: admin.mo  admin.po  base.mo  base.po  basics.mo  basics.po  utils.po
requirements/: base.in  base.txt  dev.requirements.txt  local.in  local.txt  production.txt  requirements.txt
scripts/: merge_dotenvs_to_dotenv.py  migrate_yaml_to_envs.py  test_database.py
settings/: base.py  local.py  production.py
settings/cogs/: Math.py  Network.py
texts/: ci-info.md  clocks.md  help.md  info.md  jokes.json  passport-info.md  pokemons.json  roles.md  rpoll.md  search.md  ytb.json
tuxbot/: __init__.py  __main__.py  __run__.py  logging.ini  logging.py  setup.py  start.py
tuxbot/abc/: CommandABC.py  ModuleABC.py  TuxbotABC.py  __init__.py  module_abc.py  tuxbot_abc.py
tuxbot/cogs/: __init__.py
tuxbot/cogs/Admin/: __init__.py  admin.py  config.py
tuxbot/cogs/Admin/commands/: RestartCommand.py  UpdateCommand.py  __init__.py
tuxbot/cogs/Admin/functions/: converters.py  utils.py
tuxbot/cogs/Admin/locales/: en-US.po  en-US.po~  fr-FR.po  fr-FR.po~  messages.pot
tuxbot/cogs/Admin/models/: __init__.py  (+2 more)
tuxbot/cogs/Auto/: __init__.py
tuxbot/cogs/Crypto/: __init__.py  config.py  crypto.py
tuxbot/cogs/Custom/: __init__.py  config.py  custom.py
tuxbot/cogs/Dev/: __init__.py  config.py  dev.py
tuxbot/cogs/HA/: __init__.py
tuxbot/cogs/Help/: __init__.py  config.py  help.py
tuxbot/cogs/Linux/: __init__.py  config.py  linux.py
tuxbot/cogs/Logs/: __init__.py  config.py  logs.py
tuxbot/cogs/Math/: __init__.py  config.py  math.py
tuxbot/cogs/Mod/: __init__.py  config.py  mod.py
tuxbot/cogs/Music/: __init__.py  config.py  music.py
tuxbot/cogs/Network/: __init__.py  config.py  network.py
tuxbot/cogs/Polls/: __init__.py  config.py  polls.py
tuxbot/cogs/Random/: __init__.py
tuxbot/cogs/Stats/: __init__.py  config.py  stats.py
tuxbot/cogs/Tags/: __init__.py  config.py  tags.py
tuxbot/cogs/Test/: __init__.py  config.py  test.py
tuxbot/cogs/Utils/: __init__.py  config.py  utils.py
tuxbot/cogs/Vocal/: __init__.py  vocal.py
tuxbot/cogs/admin/: __init__.py  admin.py  config.py
tuxbot/cogs/anti_raid/: __init__.py  anti_raid.py
tuxbot/cogs/dev/: config.py  dev.py
tuxbot/cogs/images/: __init__.py  images.py
tuxbot/cogs/logs/: __init__.py  additional_config.json  config.py  logs.py
tuxbot/cogs/network/: __init__.py  additional_config.json  network.py
tuxbot/cogs/warnings/: __init__.py  warnings.py
tuxbot/commands/: __init__.py
tuxbot/commands/Admin/: __init__.py  admin.py
tuxbot/core/: Tuxbot.py  __init__.py  bot.py  checks.py  config.py  data_manager.py  database.py  exceptions.py  i18n.py  logger.py  redis.py  tuxbot.py
tuxbot/core/collections/: CommandCollection.py  ModuleCollection.py  __init__.py  module_collection.py
tuxbot/core/locales/: en-US.po  fr-FR.po  messages.pot
tuxbot/core/managers/: EventManager.py  PermissionsManager.py  WebhookManager.py  __init__.py
tuxbot/core/models/: Guild.py  Tuxbot.py  __init__.py  guild.py  tuxbot.py
tuxbot/core/utils/: Colors.py  ContextPlus.py  Emotes.py  Generators.py  SetInterval.py  __init__.py  cache.py  checks.py  colors.py  console.py  context_plus.py  data_manager.py  emotes.py  generators.py  paginator.py
tuxbot/misc/: logo.txt
utils/: __init__.py  database.py  lang.py  paginator.py
utils/functions/: __init__.py  database.py  extra.py  lang.py
utils/models/: __init__.py  alias.py  lang.py  poll.py  warn.py
(+491 files in other folders)
