[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'

[tool.poetry]
name = "tuxbot"
version = "4.0.0"
description = "A discord bot made for GnousEU's guild and OpenSource"
authors = ["Romain J. <romain@gnous.eu>"]
license = "AGPL3"

[tool.poetry.scripts]
start = "tuxbot.start:start"
test-database="scripts.test_database:test"
migrate-to-envs="scripts.migrate_yaml_to_envs:main"

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "^22.1.0"
aioredis = "^2.0.1"
asyncpg = "^0.26.0"
"discord.py" = {git = "https://github.com/Rapptz/discord.py"}
discord-ext-menus = "^1.1"
jishaku = {git = "https://github.com/Gorialis/jishaku"}
PyYAML = "^6.0"
rich = "^12.6.0"
tortoise-orm = "^0.19.2"
websockets = "^10.3"
beautifulsoup4 = "^4.11.1"
graphviz = "^0.20.1"
humanize = "^4.4.0"
ipinfo = "^4.3.1"
ipwhois = "^1.2.0"
Pillow = "^9.2.0"
psutil = "^5.9.2"
pydig = "^0.4.0"
sympy = "^1.11.1"
wolframalpha = "^5.0.0"
datadog = "^0.44.0"
ddtrace = "^1.5.2"
lxml = "^4.9.1"
python-json-logger = "^2.0.4"
sentry-sdk = "^1.9.10"
django-environ = "^0.9.0"
psycopg2 = "^2.9.4"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
flake8-isort = "^5.0.0"
coverage = "^6.5.0"
black = "^22.8.0"
pre-commit = "^2.20.0"
types-aiofiles = "^22.1.0"
types_PyYAML = "^6.0.3"
bpython = "^0.23"
types-PyYAML = "^6.0.11"
mypy = "^0.982"
types-beautifulsoup4 = "^4.11.6"
types-psutil = "^5.9.5"
types-boto = "^2.49.18"
types-protobuf = "^3.20.4"
types-pytz = "^2022.1.2"
types-requests = "^2.28.11"
types-setuptools = "^65.4.0"
types-six = "^1.16.21"
types-tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core==1.0.0"]
build-backend = "poetry.core.masonry.api"
