[metadata]
name = Tuxbot-bot
version = attr: tuxbot.__version__
url = https://github.com/Rom1-J/tuxbot-bot/
author = Romain J.
author_email = romain@gnous.eu
maintainer = Romain J.
maintainer_email = romain@gnous.eu
description = A discord bot made for GnousEU's guild and OpenSource
long_description = file: README.rst
license = agplv3
platforms = linux

[options]
packages = find_namespace:
python_requires = >=3.8
install_requires =
    appdirs>=1.4.4
    asyncpg>=0.21.0
    Babel>=2.8.0
    discord.py @ git+https://github.com/Rapptz/discord.py
    discord_flags>=2.1.1
    humanize>=2.6.0
    jishaku>=1.19.1.200
    psutil>=5.7.2
    requests>=2.25.1
    rich>=6.0.0
    structured_config>=4.12
    tortoise-orm>=0.16.17

[options.entry_points]
console_scripts =
    tuxbot=tuxbot.__main__:main
    tuxbot-setup=tuxbot.setup:setup

[options.packages.find]
include =
    tuxbot
    tuxbot.*

[options.package_data]
* =
    locales/*.po
    **/locales/*.po
    data/*
    data/**/*
