[metadata]
name = Tuxbot-bot
version = attr: tuxbot.__version__
url = https://github.com/Rom1-J/tuxbot-bot/
author = Romain J.
author_email = romain@gnous.eu
maintainer = Romain J.
maintainer_email = romain@gnous.eu
description = A discord bot made for GnousEU's guild and OpenSource
long_description = file: README.rst
license = agplv3
platforms = linux

[options]
packages = find_namespace:
python_requires = >=3.8
install_requires =
    aiocache>=0.11.1
    asyncpg>=0.21.0
    Babel>=2.8.0
    beautifulsoup4>=4.9.3
    discord.py @ git+https://github.com/iDevision/enhanced-discord.py
    discord-ext-menus
    graphviz>=0.16
    humanize>=2.6.0
    ipinfo>=4.1.0
    ipwhois>=1.2.0
    jishaku @ git+https://github.com/Gorialis/jishaku
    Pillow>=8.2.0
    python-Levenshtein>=0.12.2.
    psutil>=5.7.2
    pydig>=0.3.0
    rich>=9.10.0
    sentry_sdk>=0.20.2
    structured_config>=4.12
    sympy>=1.8
    tortoise-orm>=0.16.17
    Wavelink>=0.9.9
    wolframalpha>=5.0.0

[options.entry_points]
console_scripts =
    tuxbot=tuxbot.__main__:main
    tuxbot-setup=tuxbot.setup:setup

[options.packages.find]
include =
    tuxbot
    tuxbot.*

[options.package_data]
* =
    locales/*.po
    **/locales/*.po
    data/*
    data/**/*
